[package]
name = "actix-error-mapper-middleware"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.7"
ed25519-dalek = "1.0.1"
serde = "1.0"
actix-web="^4"
jwt-compact = { version = "0.5.0", features = ["ed25519-dalek"] } 
serde_cbor = "0.11.1"
futures-util = "0.3.21"

[dev-dependencies]
rusty-html = { path = "../rusty-html" }
actix-jwt-auth-middleware = { path = "../actix-jwt-auth-middleware" }

