[package]
name = "actix-error-mapper-middleware"
version = "0.1.0"
edition = "2021"
authors = ["Michael van Straten"]
repository = "https://github.com/michaelvanstraten/actix-error-mapper-middleware"
documentation = "https://docs.rs/actix-error-mapper-middleware/"
keywords = ["web", "futures", "utility", "actix-web", "error-handling"]
categories = ["Accessibility"]
readme = "readme.md"
description = "This simple crate allows you to remap actix-web errors to your own custom error type. You could for example return a html wrapped error. "
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.7"
ed25519-dalek = "1.0.1"
serde = "1.0"
actix-web="^4"
jwt-compact = { version = "0.5.0", features = ["ed25519-dalek"] } 
serde_cbor = "0.11.1"
futures-util = "0.3.21"

[dev-dependencies]
rusty-html = "^0.1"
actix-jwt-auth-middleware = "^0.1"

